samples/_failures_safe/1761293736_041437_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9932f486.c: In function ‘main’:
./samples/SAFE/__tmp_9932f486.c:162:5: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  162 |     buffer
      |     ^~~~~~
      |     Buffer
./samples/SAFE/__tmp_9932f486.c:162:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9932f486.c:162:11: error: expected ‘;’ at end of input
  162 |     buffer
      |           ^
      |           ;
./samples/SAFE/__tmp_9932f486.c:162:5: error: expected declaration or statement at end of input
  162 |     buffer
      |     ^~~~~~
